--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "2.2.19"
+    "body-parser": "1.15.2",
+    "express": "4.14.0",
+    "mongodb": "2.2.19",
+    "mongoose": "4.11.3"
   }
 }
