--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "todo-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "1.15.2",
-    "express": "4.14.0",
-    "mongodb": "2.2.19",
-    "mongoose": "4.11.3"
-  }
+    "name": "todo-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha server/**/*.test.js",
+        "start": "node server/server.js",
+        "test-watch": "nodemon --exec 'npm test'"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "1.15.2",
+        "express": "4.14.0",
+        "mongodb": "2.2.19",
+        "mongoose": "4.11.3"
+    },
+    "devDependencies": {
+        "expect": "1.20.2",
+        "mocha": "3.0.2",
+        "supertest": "2.0.0"
+    }
 }
