--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "mocha server/**/*.test.js",
-        "start": "node server/server.js",
+        "start": "nodemon server/server.js",
         "test-watch": "nodemon --exec 'npm test'"
     },
     "keywords": [],
