--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
     "main": "index.js",
     "scripts": {
         "test": "mocha server/**/*.test.js",
-        "start": "nodemon server/server.js",
+        "start": "node server/server.js",
+        "watch": "nodemon server/server.js",
         "test-watch": "nodemon --exec 'npm test'"
     },
+    "engines": {
+        "node": "7.10.0"
+    },
     "keywords": [],
-    "author": "",
+    "author": "Austin Eady",
     "license": "ISC",
     "dependencies": {
         "body-parser": "1.15.2",
