--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "mocha server/**/*.test.js",
         "start": "node server/server.js",
         "watch": "nodemon server/server.js",
-        "test-watch": "nodemon --exec 'npm test'"
+        "test-watch": "nodemon --exec 'npm test'",
+        "deploy": "git push heroku master"
     },
     "engines": {
         "node": "7.10.0"
